<resources>

    <!--deals_item-->
    <string name="name_deals_list">Nom</string>
    <string name="reduction_list">Réduction</string>
    <string name="description_reduction_list">Description</string>
    <string name="app_name">Good Deals</string>
    <string name="good">Good</string>
    <string name="deals">Deals</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vue_map">Vue Map</string>
    <string name="vue_liste">Vue Liste</string>
    <string name="google_maps_API_key">AIzaSyDLjhEEUB50X-DHJDHTpm-pg3qVbBjFkJo</string>
    <string name="unableCurrentLocation">Position actuelle invalide</string>
    <string name="mapRequests">Affichage de la carte impossible</string>
    <string name="se_connecter">Se connecter</string>
    <string name="map">Carte des deals</string>
    <string name="liste_des_deals">Liste des deals</string>
    <string name="se_logout">Se déconnecter</string>
    <string name="pop_up">Pop Up</string>
    <string name="colombus">Colombus</string>
    <string name="description">Colombus</string>
    <string name="ColombusText">Proposer une expérience café unique… Tel est l’objectif de Columbus Café depuis ses débuts. Des allures anglo-saxonnes, un style français, un café de qualité et surtout des valeurs…</string>
    <string name="_10">-10%</string>
    <string name="colombus_caf_co"><![CDATA[Colombus Café & Co]]></string>
    <string name="colombus_image">Colombus image</string>
    <string name="clicliste">Cliquer sur la liste</string>
    <string name="athome_web">En savoir plus sur AtHome</string>
    <string name="titleShare">SHARE YOUR GOOD DEAL</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Mot de passe</string>
    <string name="loginButton">Se connecter</string>
    <string name="loginButtonRegistration">Enregistrez-vous ici!</string>
    <string name="loginTextView">Good Deals</string>
    <string name="fill_all_fields" />
    <string name="registrationEmail">Email</string>
    <string name="registrationPassword">Mot de passe</string>
    <string name="registrationButton">Inscription</string>
    <string name="registrationTextView">Good Deals</string>
    <string name="error_login_fields">Merci de renseigner votre email et votre mot de passe</string>

    <!--Profil-->
    <string name="deconnectButton">Déconnexion</string>
    <string name="buttonPhoto">Photo</string>
    <string name="profilTextView">Bienvenue Boby</string>
    <string name="buttonPhotoGallery">Galerie</string>
    <string name="choisir_une_image">CHOISIR UNE IMAGE DE LA GALLERIE</string>
    <string name="choisir_cette_photo">CHOISIR CETTE PHOTO</string>
    <string name="prendre_une_photo">PRENDRE UNE PHOTO</string>
    <string name="nom_pseudo">Choisissez un peudo...</string>
    <string name="button_pseudo">Mettre à jour</string>

    <!--PopUp-->
    <string name="pour_manger">Pour Manger</string>


    <string name="se_d_connecter">Se déconnecter</string>
    <string name="nom_fichier">Nom du Fichier</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="connected">vous êtes connecté</string>
    <string name="disconnected">Vous êtes déconnecté</string>
    <string name="pour_manger_filter">Pour manger</string>
    <string name="aperos_filter">Apéros</string>
    <string name="friandises_filter">Friandises</string>
    <string name="bien_etre_filter">Bien être</string>
    <string name="loisirs_filter">Loisirs</string>
    <string name="text_butfilter">OK</string>
    <string name="erreur_chargement">Erreur de chragement de la base de données</string>
    <string name="share_body">J\'ai testé \</string>
    <string name="share_bodybis">, c\'est un super deal! Si tu es un startupper d\'At Home, n\'oublie pas de télécharger l\'appli Good Deals sur le PlayStore! \ Rejoins moi ! \</string>
    <string name="title_share">Super deal - \</string>

    <string name="suppression_compte">Vous êtes sûr de vouloir supprimer votre compte ?</string>
    <string name="oui">Oui</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="choose_picture">Choisir dans la galerie</string>
    <string name="cancel">Annuler</string>
    <string name="add_pic">Ajouter une photo !</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="valider">valider</string>
    <string name="choisir_son_pseudo">Choisir son pseudo</string>
    <string name="acces_filtre">Connectez-vous pour pouvoir accéder aux filtres.</string>
    <string name="categorie">Veuillez cocher au moins une catégorie</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="mon_profil">Mon Profil</string>



</resources>

