<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/se_connecter" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_liste"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/liste_des_deals" />
        <item
            android:id="@+id/atHome_web"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/athome_web" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/se_logout"
            android:visible="false" />


    </group>

</menu>
