<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/headerNav"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/background1"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageDeal"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/pseudo_header"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:visibility="invisible"
        app:fontFamily="@font/montserrat" />

    <TextView
        android:id="@+id/emailUser_text_view"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp"
        android:visibility="gone"
        app:fontFamily="@font/montserrat" />

</LinearLayout>
